log_output/ping-pong/manifests/deployment-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  namespace: exercises
  name: ping-pong-deployment

spec:
  replicas: 4

  strategy:
    canary:
      steps:
        - setWeight: 50
        - analysis:
            templates:
              - templateName: pingpong-cpu-analysis

  selector:
    matchLabels:
      app: ping-pong

  template:
    metadata:
      labels:
        app: ping-pong

    spec:
      containers:
      - name: ping-pong
        image: ping-pong
        imagePullPolicy: Never

        ports:
          - containerPort: 3001

        readinessProbe:
          httpGet:
            path: /ready
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
