log_output/ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: exercises
  name: ping-pong-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ping-pong

  template:
    metadata:
      labels:
        app: ping-pong

    spec:
      containers:
      - name: ping-pong
        image: ping-pong
        imagePullPolicy: Never

        ports:
          - containerPort: 3001

        readinessProbe:
          httpGet:
            path: /ready
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
