log_output/ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  namespace: exercises
  name: ping-pong-service

spec:

  type: NodePort

  selector:
    app: ping-pong

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
