log_output/ping-pong/manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  namespace: exercises
  name: project-ingress

spec:

  rules:

  - http:

      paths:

      - path: /pingpong

        pathType: Prefix

        backend:

          service:

            name: ping-pong-service

            port:

              number: 80
